# Presto-SCA-Unofficial

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: benchmark-reproduction.md  bug_report.md  feature_request.md  implementation-gap.md
configs/: presto_sca_toy.yaml
scripts/: smoke_test.py
src/presto_sca_unofficial/: __init__.py  attention.py
